@startuml ACPI Toolkit

package "ACPIAnalyzer" {
  class "<<module>>" as ACPIAnalyzer {
    + collect(workdir: Path): None
    + analyze(rule_path: Path, files: Path, vars_path?: Path, fmt: str): None
    - _collect_targets(path: Path): list[Path]
    - _ensure_workdir(path: Path): Path
  }
}

package "DataProvider" {
  class CommandSpec {
    + argv: Sequence[str]
    + cwd: Optional[Path]
    + sudo: bool
    + capture_output: bool
    + quiet: bool
    + allowed_return_codes: set[int]
  }

  class SubprocessRunner {
    + run(spec: CommandSpec): CompletedProcess
  }

  class PipelineContext {
    + workdir: Path
    + data: MutableMapping[str, object]
  }

  abstract class PipelineStage {
    + {abstract} name(): str
    + {abstract} run(ctx: PipelineContext, runner: SubprocessRunner): None
  }

  class PipelineRunner {
    - runner: SubprocessRunner
    - _stages: list[PipelineStage]
    + register(stage: PipelineStage): PipelineRunner
    + run(ctx: PipelineContext): None
  }

  package "Stages" {
    class DumpACPI {
      + output_file: str
      + name(): str
      + run(ctx, runner): None
    }

    class ExtractTables {
      + name(): str
      + run(ctx, runner): None
    }

    class DisassembleTables {
      + dsl_ext: str
      + name(): str
      + run(ctx, runner): None
    }

    class GrepIomemKernel {
      + output_file: str
      + name(): str
      + run(ctx, runner): None
      - _exec_grep(runner): str
      - _parse_lines(text: str): list[dict]
      - _write_json(workdir: Path, payload: dict): Path
    }

    class AstGrepScan {
      + ast_rule: dict
      + target: Path
      + name(): str
      + run(ctx, runner): None
      - _make_config_file(): Path
      - _make_rule_file(): Path
      - _parse_jsonl(raw: str): list[dict]
    }
  }
}

package "ACPIMatcher" {
  class RuleSchema {
    + ast: dict
    + logic: Optional[dict[str, str]]
    + return_: list[dict]
  }

  class YamlProcessor {
    + rule_path: Path
    + ast_section: dict
    + logic_section: Optional[dict[str, str]]
    + return_section: list[dict]
    + get_rule_info(): dict
  }

  class "<<module>> json_handler" as JsonHandler {
    + read(in_path: Path): Any
    + normalize(matches: list[dict]): list[dict]
    - _integer_from_string(value: str | None): Any
  }

  class "<<module>> logic_ops" as LogicOps {
    + make_range(start: int, length: int): list[int]
    + overlaps(a: list[int], b: list[int]): bool
    + overlaps_any(a: list[int], ranges: list): bool
    + in_range(value: int, bounds: list[int]): bool
    + in_any_range(value: int, ranges: list): bool
    + evaluate(expr: str, record: dict, logic_values: dict, externals: dict): Any
  }

  class LogicEngine {
    + steps: dict[str, str]
    + externals: dict[str, Any]
    + evaluate(records: list[dict]): list[dict]
    - _evaluate_record(record: dict): dict | None
  }

  class ReturnDecision {
    + record: dict
    + found: bool
    + reason: Optional[str]
  }

  class ReturnEvaluator {
    + steps: list[dict]
    + externals: dict[str, Any]
    + evaluate(records: list[dict]): list[ReturnDecision]
    - _decide_record(record: dict): ReturnDecision
  }

  class MatchResult {
    + target: Path
    + found: bool
    + matches: list[dict]
  }

  class "<<function>> match()" as MatchAPI {
    match(rule_path: Path, files: list[Path], *, externals: dict): list[MatchResult]
  }
}

package "Formatters" {
  class MatchEvent {
    + rule: dict
    + target: Path
    + decision: ReturnDecision
  }

  abstract class Formatter {
    + {abstract} feed(event: MatchEvent): None
    + {abstract} finalize(total_files: int): None
  }

  class ConsoleFormatter {
    + feed(event: MatchEvent): None
    + finalize(total_files: int): None
  }

  class JsonFormatter {
    + feed(event: MatchEvent): None
    + finalize(total_files: int): None
  }

  class "<<function>> make_formatter()" as FormatterFactory {
    make_formatter(name: str): Formatter
  }
}

' Inheritance
PipelineStage <|-- DumpACPI
PipelineStage <|-- ExtractTables
PipelineStage <|-- DisassembleTables
PipelineStage <|-- GrepIomemKernel
PipelineStage <|-- AstGrepScan
Formatter <|-- ConsoleFormatter
Formatter <|-- JsonFormatter

' Composition
PipelineRunner *-- SubprocessRunner
PipelineRunner o-- PipelineStage
YamlProcessor *-- RuleSchema
MatchEvent *-- ReturnDecision

' Usage
ACPIAnalyzer --> PipelineRunner
ACPIAnalyzer --> YamlProcessor
ACPIAnalyzer --> JsonHandler
ACPIAnalyzer --> ReturnEvaluator
ACPIAnalyzer --> LogicEngine
ACPIAnalyzer --> FormatterFactory
ACPIAnalyzer --> Formatter
MatchAPI --> YamlProcessor
MatchAPI --> AstGrepScan
MatchAPI --> JsonHandler
MatchAPI --> LogicEngine
MatchAPI --> ReturnEvaluator
MatchAPI ..> MatchResult
PipelineRunner --> PipelineContext
PipelineStage --> PipelineContext
PipelineStage --> SubprocessRunner
SubprocessRunner --> CommandSpec
FormatterFactory --> Formatter
Formatter --> MatchEvent
LogicEngine --> LogicOps
ReturnEvaluator --> LogicOps

@enduml
